--- a/index.html
+++ b/index.html
@@ -149,6 +149,14 @@
       transform: none !important;
     }
 
+    .fragment-smaller.visible ~ * {
+      font-size: 0.3em;
+    }
+
+    .fragment-smallerer.visible ~ * {
+      font-size: 0.2em;
+    }
+
     .elm {
       width: 100%;
       height: 100%;
@@ -553,17 +561,28 @@
           ---
           <br>
 
-          ### A world of Accronymes
-          <p class="small text-left fragment"><strong>COTRI</strong> : Contrat d’Objectifs Territorial pour l’accélération de la  Troisième Révolution Industrielle</p>
-          <p class="small text-left fragment"><strong>EPCI</strong> : Etablissement Public de Coopération Intercommunale</p>
-          <p class="small text-left fragment"><strong>PAT</strong> : Projet Alimentaire Territorial</p>
-          <p class="small text-left fragment"><strong>PCAET</strong> : Plan Climat Air Energie Territorial</p>
-          <p class="small text-left fragment"><strong>PLU</strong> : Plan Local d’Urbanisme</p>
-          <p class="small text-left fragment"><strong>PNR</strong> : Parc Naturel Régional</p>
-          <p class="small text-left fragment"><strong>SCOT</strong> : Schéma de COhérence Territorial</p>
-          <p class="small text-left fragment"><strong>SNBC</strong> : Stratégie Nationale Bas Carbone</p>
-          <p class="small text-left fragment"><strong>SRADDET</strong> : Schéma Régional d’Aménagement, de Développement Durable et d’Egalité des Territoires</p>
-          <p class="small text-left fragment"><strong>SRGS</strong> : Schéma Régional de Gestion Sylvicole</p>
+          ### A world of Acronymes
+          <p class="fragment-smaller fragment" data-fragment-index="10"</p>
+          <p class="fragment-smallerer fragment" data-fragment-index="17"</p>
+          <p class="small text-left fragment" data-fragment-index="1"><strong>COTRI</strong> : Contrat d’Objectifs Territorial pour l’accélération de la  Troisième Révolution Industrielle</p>
+          <p class="small text-left fragment" data-fragment-index="2"><strong>EPCI</strong> : Etablissement Public de Coopération Intercommunale</p>
+          <p class="small text-left fragment" data-fragment-index="3"><strong>PAT</strong> : Projet Alimentaire Territorial</p>
+          <p class="small text-left fragment" data-fragment-index="4"><strong>PCAET</strong> : Plan Climat Air Energie Territorial</p>
+          <p class="small text-left fragment" data-fragment-index="5"><strong>PLU</strong> : Plan Local d’Urbanisme</p>
+          <p class="small text-left fragment" data-fragment-index="6"><strong>PNR</strong> : Parc Naturel Régional</p>
+          <p class="small text-left fragment" data-fragment-index="7"><strong>SCOT</strong> : Schéma de COhérence Territorial</p>
+          <p class="small text-left fragment" data-fragment-index="8"><strong>SNBC</strong> : Stratégie Nationale Bas Carbone</p>
+          <p class="small text-left fragment" data-fragment-index="9"><strong>SRADDET</strong> : Schéma Régional d’Aménagement, de Développement Durable et d’Egalité des Territoires</p>
+          <p class="small text-left fragment" data-fragment-index="10"><strong>SRGS</strong> : Schéma Régional de Gestion Sylvicole</p>
+          <p class="small text-left fragment" data-fragment-index="12"><strong>SDAGE</strong> : Schéma Directeur d’Aménagement et de Gestion des Eaux</p>
+          <p class="small text-left fragment" data-fragment-index="13"><strong>SAGE</strong> : Schéma d’Aménagement et de Gestion des Eaux</p>
+          <p class="small text-left fragment" data-fragment-index="14"><strong>CDPENAF</strong> : Commission Départementale de Préservation des Espaces Naturels Agricoles et Forestiers</p>
+          <p class="small text-left fragment" data-fragment-index="15"><strong>SNAP</strong> : Stratégie Nationale pour les Aires Protégées</p>
+          <p class="small text-left fragment" data-fragment-index="16"><strong>OFB</strong> : Office National de Biodiversité</p>
+          <p class="small text-left fragment" data-fragment-index="17"><strong>SRGS</strong> : Schéma Régional de Gestion Sylvicole</p>
+          <p class="small text-left fragment" data-fragment-index="18"><strong>UICN</strong> : Union Internationale pour la Conservation de la Nature </p>
+          <p class="small text-left fragment" data-fragment-index="19"><strong>CLE</strong> : Commission locale de l’eau</p>
+          <p class="small text-left fragment" data-fragment-index="20"><strong>PAGD</strong> : Plan d’aménagement et de Gestion Durable</p>
           ---
           ### Rationalité en Finalité
           > "Par l’action rationnelle en finalité, l’individu conçoit un but et recherche ensuite les moyens permettant de l’atteindre."<br>
@@ -579,13 +598,13 @@
           ---
           ## Lois
           ---
-          ### REEN
-          <small>15 novembre 2021</small><br>
-          > Réduire l’Empreinte Environnementale du Numérique
-          ---
           ### AGEC
           <small>10 février 2020</small><br>
           > Anti-Gaspillage pour une Économie Circulaire
+          ---
+          ### REEN
+          <small>15 novembre 2021</small><br>
+          > Réduire l’Empreinte Environnementale du Numérique
           ---
           ### Loi handicap
           <small>11 février 2005</small><br>
@@ -650,7 +669,6 @@
           ### RGESN
           <p class="small text-left fragment"><strong>#1.1</strong> - Le service numérique a-t-il été évalué favorablement en termes d’utilité en tenant compte de ses impacts environnementaux&nbsp?</p>
           <p class="small text-left fragment"><strong>#1.5</strong> - Le service numérique est-il utilisable sur des terminaux âgés de 5 ans ou plus&nbsp?</p>
-          <p class="small text-left fragment"><strong>#4.9</strong> - Le service numérique permet-il de mettre en pause les animations, défilement ou clignotement&nbsp?</p>
           <p class="small text-left fragment"><strong>#6.1</strong> - Le service numérique s’astreint-il à un poids maximum par écran&nbsp?</p>
           <span class="stamp is-nope is-value is-left fragment zoom-out">Valeur ?</span>
           <span class="stamp is-draft is-left fragment zoom-out">Déclaration explicative !</span>
@@ -669,11 +687,6 @@
           1. Inventaire <!-- .element: class="fragment" -->
           2. Collecte <!-- .element: class="fragment" -->
           3. Déclaration <!-- .element: class="fragment" -->
-          ---
-          ### Rôle du référent
-          1. Conformité <!-- .element: class="fragment" -->
-          2. Formation <!-- .element: class="fragment" -->
-          3. Culture <!-- .element: class="fragment" -->
           </textarea>
         </section>
         <!-- <section data-auto-animate data-transition="none">
@@ -804,6 +817,7 @@
 
             <span class="stamp is-draft is-left fragment zoom-out">Organisme ?</span>
             <span class="stamp is-approved is-finality is-right fragment zoom-out">Services ?</span>
+            <span class="stamp is-nope is-value is-center fragment zoom-out">Projet ?</span>
             ---
             ## Que faire ?
             ---
@@ -814,6 +828,11 @@
             1. Je suis un Acheteur ?
             1. Je suis un Sysadmin ?
             1. Je suis malvoyant ?
+            ---
+            ### Rôle des référents
+            1. Conformité <!-- .element: class="fragment" -->
+            2. Formation <!-- .element: class="fragment" -->
+            3. Culture <!-- .element: class="fragment" -->
             ---
             Faites des 💋 !
           </textarea>
