--- a/index.html
+++ b/index.html
@@ -558,10 +558,17 @@
           ### La contrainte légale
           ---
           ### 🤔
-          ---
+        </textarea>
+      </section>
+      <section data-markdown data-auto-animate>
+        <textarea data-template>
+          <h3>A world of Acronymes</h3>
+        </textarea>
+      </section>
+      <section data-markdown data-auto-animate>
+        <textarea data-template>
           <br>
-
-          ### A world of Acronymes
+          <h3>A world of Acronymes</h3>
           <p class="fragment-smaller fragment" data-fragment-index="10"</p>
           <p class="fragment-smallerer fragment" data-fragment-index="17"</p>
           <p class="small text-left fragment" data-fragment-index="1"><strong>COTRI</strong> : Contrat d’Objectifs Territorial pour l’accélération de la  Troisième Révolution Industrielle</p>
@@ -583,7 +590,10 @@
           <p class="small text-left fragment" data-fragment-index="18"><strong>UICN</strong> : Union Internationale pour la Conservation de la Nature </p>
           <p class="small text-left fragment" data-fragment-index="19"><strong>CLE</strong> : Commission locale de l’eau</p>
           <p class="small text-left fragment" data-fragment-index="20"><strong>PAGD</strong> : Plan d’aménagement et de Gestion Durable</p>
-          ---
+        </textarea>
+      </section>
+      <section data-markdown data-transition="none">
+        <textarea data-template>
           ### Rationalité en Finalité
           > "Par l’action rationnelle en finalité, l’individu conçoit un but et recherche ensuite les moyens permettant de l’atteindre."<br>
             **Max Weber**
@@ -835,13 +845,6 @@
             3. Culture <!-- .element: class="fragment" -->
             ---
             Faites des 💋 !
-          </textarea>
-        </section>
-        <!-- <section data-transition="fade" data-background-image="/assets/Frago-organisme-seul.png" data-background="#fff" data-background-size="56%"></section> -->
-        <!-- <section data-transition="fade" data-background-image="/assets/Frago-organisme-direction.png" data-background="#fff" data-background-size="100%"></section> -->
-        <section data-markdown data-transition="none">
-          <textarea data-template>
-            ## Je commence par quoi ?
           </textarea>
         </section>
       </div>
