fix: mask image

--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
       text-transform: uppercase;
       border-radius: 1rem;
       font-family: 'Courier';
-      -webkit-mask-image: url('/assets/grunge.png');
+      -webkit-mask-image: url('https://bertrandkeller.github.io/conference-et-toi-greenit-dijon-2023//assets/grunge.png');
       -webkit-mask-size: 944px 604px;
       mix-blend-mode: multiply;
       font-size: 1.5rem;
@@ -699,20 +699,6 @@
           3. Déclaration <!-- .element: class="fragment" -->
           </textarea>
         </section>
-        <!-- <section data-auto-animate data-transition="none">
-          <h3>Les Fondamentaux</h3>
-          <div class="flex flex-column">
-            <div data-id="box1" class="box box-v fragment" data-fragment-index="3">
-              Culture
-            </div>
-            <div data-id="box1" class="box box-v fragment" data-fragment-index="2">
-              Formation
-            </div>
-            <div data-id="box1" class="box box-v fragment" data-fragment-index="1">
-              Conformité
-            </div>
-          </div>
-        </section>  -->
         <section data-markdown data-transition="none">
           <textarea data-template>
             ## L’💡 derrière tous ça ?
