--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
       text-transform: uppercase;
       border-radius: 1rem;
       font-family: 'Courier';
-      -webkit-mask-image: url('https://bertrandkeller.github.io/conference-et-toi-greenit-dijon-2023//assets/grunge.png');
+      -webkit-mask-image: url('https://bertrandkeller.github.io/conference-et-toi-greenit-dijon-2023/assets/grunge.png');
       -webkit-mask-size: 944px 604px;
       mix-blend-mode: multiply;
       font-size: 1.5rem;
@@ -341,6 +341,19 @@
       transform: rotate(14deg);
     }
 
+    .is-draft {
+      color: #C4C4C4;
+      border: 1rem double #C4C4C4;
+      transform: rotate(-5deg) scale(4);
+      font-family: "Open sans", Helvetica, Arial, sans-serif;
+      border-radius: 0;
+      padding: 0.5rem;
+    }
+
+    .is-draft.visible {
+      transform: rotate(-5deg);
+    }
+
     .is-left {
       top: -6rem;
       left: 5vw;
@@ -364,15 +377,6 @@
     .is-finality is-right {
       color: #9485fc;
       border-color: #9485fc;
-    }
-
-    .is-draft {
-      color: #C4C4C4;
-      border: 1rem double #C4C4C4;
-      transform: rotate(-5deg);
-      font-family: "Open sans", Helvetica, Arial, sans-serif;
-      border-radius: 0;
-      padding: 0.5rem;
     }
 
     //.stamp {
