fix: last slide content

--- a/index.html
+++ b/index.html
@@ -586,7 +586,7 @@
           <p class="small text-left fragment" data-fragment-index="9"><strong>SRADDET</strong> : Schéma Régional d’Aménagement, de Développement Durable et d’Egalité des Territoires</p>
           <p class="small text-left fragment" data-fragment-index="10"><strong>SRGS</strong> : Schéma Régional de Gestion Sylvicole</p>
           <p class="small text-left fragment" data-fragment-index="12"><strong>SDAGE</strong> : Schéma Directeur d’Aménagement et de Gestion des Eaux</p>
-          <p class="small text-left fragment" data-fragment-index="13"><strong>SAGE</strong> : Schéma d’Aménagement et de Gestion des Eaux</p>
+          <p class="small text-left fragment" data-fragment-index="13"><strong>HNCE</strong> : Haut comité pour le numérique écoresponsable</p>
           <p class="small text-left fragment" data-fragment-index="14"><strong>CDPENAF</strong> : Commission Départementale de Préservation des Espaces Naturels Agricoles et Forestiers</p>
           <p class="small text-left fragment" data-fragment-index="15"><strong>SNAP</strong> : Stratégie Nationale pour les Aires Protégées</p>
           <p class="small text-left fragment" data-fragment-index="16"><strong>OFB</strong> : Office National de Biodiversité</p>
@@ -594,6 +594,7 @@
           <p class="small text-left fragment" data-fragment-index="18"><strong>UICN</strong> : Union Internationale pour la Conservation de la Nature </p>
           <p class="small text-left fragment" data-fragment-index="19"><strong>CLE</strong> : Commission locale de l’eau</p>
           <p class="small text-left fragment" data-fragment-index="20"><strong>PAGD</strong> : Plan d’aménagement et de Gestion Durable</p>
+          <p class="small text-left fragment" data-fragment-index="21"><strong>SAGE</strong> : Schéma d’Aménagement et de Gestion des Eaux</p>
         </textarea>
       </section>
       <section data-markdown data-transition="none">
@@ -726,7 +727,7 @@
         </section>
         <section data-transition="none">
           <h3>Organisme</h3>
-          <div class="flex fragment">
+          <div class="flex">
             <div data-id="box2" class="box bgv fragment">
               ÉTAT
             </div>
@@ -819,20 +820,36 @@
             <span class="stamp is-approved is-finality is-right fragment zoom-out">Services ?</span>
             <span class="stamp is-nope is-value is-center fragment zoom-out">Projet ?</span>
             ---
-            ## Que faire ?
+            ## Passer à une vision organique
             ---
             ### Approche par la compétence&nbsp;!
-            1. Je suis un rédacteur ?
-            1. Je suis un développeur ?
-            1. Je suis un responsable RSE ?
+            1. Je suis un Rédacteur ?
+            1. Je suis un Développeur ?
+            1. Je suis un Responsable RSE ?
             1. Je suis un Acheteur ?
-            1. Je suis un Sysadmin ?
-            1. Je suis malvoyant ?
+            1. Je suis un SysAdmin ?
+            1. Je suis Malvoyant ?
+            1. … <!-- .element: class="fragment" -->
+            1. Je suis tout ça en même temps ? <!-- .element: class="fragment" -->
             ---
-            ### Rôle des référents
+            ### Approche 3 axes
             1. Conformité <!-- .element: class="fragment" -->
-            2. Formation <!-- .element: class="fragment" -->
-            3. Culture <!-- .element: class="fragment" -->
+            1. Formation <!-- .element: class="fragment" -->
+            1. Culture <!-- .element: class="fragment" -->
+            ---
+            ## La contrainte
+            ---
+            ### Perception
+            1. L’attitude « réactive »<br><small>Se limiter au minimum légal</small>
+            1. L’attitude « proactive »<br><small>Revoir ses engagements</small>
+            ---
+            ### Attitude
+            1. La « résistance »<br><small>Droit comme pouvoir arbitraire</small>
+            1. Le « jeu »<br><small>Droit sert mes propres intérêts</small>
+            1. La « conformité »<br><small>Droit définit le nécessaire</small>
+            ---
+            <!-- .slide: data-background="#4631d4" -->
+            ### Conclusion
             ---
             Faites des 💋 !
           </textarea>
