--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon.ico">
   <meta name="twitter:card" content="summary_large_image" />
-  <meta property="twitter:image" content="/twittercard.png" />
-  <meta property="twitter:title" content="Accessibilité - Suivre les obligations légales sans efforts" />
+  <meta property="twitter:image" content="assets/twittercard.png" />
+  <meta property="twitter:title" content="Et toi, t’es conforme GreenIT ?" />
   <meta name="twitter:site" content="@bertrandkeller" />
   <meta name="twitter:creator" content="@bertrandkeller" />
 
