--- a/index.html
+++ b/index.html
@@ -5,11 +5,16 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon.ico">
+  <link rel="canonical" href="https://bertrandkeller.github.io/conference-et-toi-greenit-dijon-2023/" />
+  <meta property="og:url" content="https://bertrandkeller.github.io/conference-et-toi-greenit-dijon-2023/" />
   <meta name="twitter:card" content="summary_large_image" />
-  <meta property="twitter:image" content="assets/twittercard.png" />
-  <meta property="twitter:title" content="Et toi, t’es conforme GreenIT ?" />
-  <meta name="twitter:site" content="@bertrandkeller" />
+  <meta property="twitter:image" content="https://bertrandkeller.github.io/conference-et-toi-greenit-dijon-2023/assets/twittercard.png" />
+  <meta property="twitter:title" content="Et toi, t’es conforme GreenIT&nbsp;? " />
+  <meta name="twitter:site" content="bertrandkeller" />
   <meta name="twitter:creator" content="@bertrandkeller" />
+  <meta property="og:site_name" content="Et toi, t’es conforme GreenIT&nbsp;? " />
+  <meta property="og:image" content="https://bertrandkeller.github.io/conference-et-toi-greenit-dijon-2023/assets/twittercard.png" />
+  <meta property="og:type" content="article" />
 
   <title>Et toi, t’es conforme GreenIT&nbsp;? | DevFest Dijon - 8 Décembre 2023</title>
 
