--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <link rel="icon" type="image/png" sizes="16x16" href="/favicon.ico">
+  <link rel="icon" type="image/png" sizes="16x16" href="favicon.ico">
   <link rel="canonical" href="https://bertrandkeller.github.io/conference-et-toi-greenit-dijon-2023/" />
   <meta property="og:url" content="https://bertrandkeller.github.io/conference-et-toi-greenit-dijon-2023/" />
   <meta name="twitter:card" content="summary_large_image" />
